--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,13 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      env:
+       USER: ${{ secrets.USER }}
+       PASS: ${{ secrets.PASS }}
+      run: 
+       docker build . --file Dockerfile --tag Sakpagare/hpcap-git-python-app
+       docker login -u $USER -p $PASS
+       docker push Sakpagare/hpcap-git-python-app
+
+    
+    
